Merge whitespace only changes from rc.